--- a/nestedGAN_pipelineEOS.py.yaml
+++ b/nestedGAN_pipelineEOS.py.yaml
@@ -2,16 +2,94 @@ apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata:
   generateName: ildeventgen-nestedgan-
-  annotations: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9, pipelines.kubeflow.org/pipeline_compilation_time: '2022-03-03T10:32:22.452788',
+  annotations: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9, pipelines.kubeflow.org/pipeline_compilation_time: '2022-03-03T13:00:44.951763',
     pipelines.kubeflow.org/pipeline_spec: '{"description": "Event Simulation and Reconstruction",
       "name": "ILDEventGen_NestedGAN"}'}
   labels: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9}
 spec:
   entrypoint: ildeventgen-nestedgan
   templates:
+  - name: hdf5-conversion
+    container:
+      args: ['cd LCIO; source setup.sh; cd .. &&                                 conda
+          init bash; source /root/.bashrc; conda activate root_env &&                                 git
+          clone https://github.com/EnginEren/hgAHCal-ECal.git && cd $PWD/hgAHCal-ECal
+          &&                                 cp /secret/krb-secret-vol/krb5cc_1000
+          /tmp/krb5cc_0 && chmod 600 /tmp/krb5cc_0 &&                                 &&
+          python create_hdf5EOS.py --lcio "$0" --outputR "$1" --outputP "$2" --nEvents
+          100', /tmp/inputs/input-0/data, testEOS, '1']
+      command: [/bin/bash, -c]
+      image: ilcsoft/py3lcio:lcio-16
+    inputs:
+      artifacts:
+      - {name: reconstruction-metadata, path: /tmp/inputs/input-0/data}
+    metadata:
+      labels:
+        pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
+        pipelines.kubeflow.org/pipeline-sdk-type: kfp
+        pipelines.kubeflow.org/enable_caching: "true"
+      annotations: {pipelines.kubeflow.org/max_cache_staleness: P0D}
+  - name: hdf5-conversion-2
+    container:
+      args: ['cd LCIO; source setup.sh; cd .. &&                                 conda
+          init bash; source /root/.bashrc; conda activate root_env &&                                 git
+          clone https://github.com/EnginEren/hgAHCal-ECal.git && cd $PWD/hgAHCal-ECal
+          &&                                 cp /secret/krb-secret-vol/krb5cc_1000
+          /tmp/krb5cc_0 && chmod 600 /tmp/krb5cc_0 &&                                 &&
+          python create_hdf5EOS.py --lcio "$0" --outputR "$1" --outputP "$2" --nEvents
+          100', /tmp/inputs/input-0/data, testEOS, '2']
+      command: [/bin/bash, -c]
+      image: ilcsoft/py3lcio:lcio-16
+    inputs:
+      artifacts:
+      - {name: reconstruction-2-metadata, path: /tmp/inputs/input-0/data}
+    metadata:
+      labels:
+        pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
+        pipelines.kubeflow.org/pipeline-sdk-type: kfp
+        pipelines.kubeflow.org/enable_caching: "true"
+      annotations: {pipelines.kubeflow.org/max_cache_staleness: P0D}
+  - name: hdf5-conversion-3
+    container:
+      args: ['cd LCIO; source setup.sh; cd .. &&                                 conda
+          init bash; source /root/.bashrc; conda activate root_env &&                                 git
+          clone https://github.com/EnginEren/hgAHCal-ECal.git && cd $PWD/hgAHCal-ECal
+          &&                                 cp /secret/krb-secret-vol/krb5cc_1000
+          /tmp/krb5cc_0 && chmod 600 /tmp/krb5cc_0 &&                                 &&
+          python create_hdf5EOS.py --lcio "$0" --outputR "$1" --outputP "$2" --nEvents
+          100', /tmp/inputs/input-0/data, testEOS, '3']
+      command: [/bin/bash, -c]
+      image: ilcsoft/py3lcio:lcio-16
+    inputs:
+      artifacts:
+      - {name: reconstruction-3-metadata, path: /tmp/inputs/input-0/data}
+    metadata:
+      labels:
+        pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
+        pipelines.kubeflow.org/pipeline-sdk-type: kfp
+        pipelines.kubeflow.org/enable_caching: "true"
+      annotations: {pipelines.kubeflow.org/max_cache_staleness: P0D}
   - name: ildeventgen-nestedgan
     dag:
       tasks:
+      - name: hdf5-conversion
+        template: hdf5-conversion
+        dependencies: [reconstruction]
+        arguments:
+          artifacts:
+          - {name: reconstruction-metadata, from: '{{tasks.reconstruction.outputs.artifacts.reconstruction-metadata}}'}
+      - name: hdf5-conversion-2
+        template: hdf5-conversion-2
+        dependencies: [reconstruction-2]
+        arguments:
+          artifacts:
+          - {name: reconstruction-2-metadata, from: '{{tasks.reconstruction-2.outputs.artifacts.reconstruction-2-metadata}}'}
+      - name: hdf5-conversion-3
+        template: hdf5-conversion-3
+        dependencies: [reconstruction-3]
+        arguments:
+          artifacts:
+          - {name: reconstruction-3-metadata, from: '{{tasks.reconstruction-3.outputs.artifacts.reconstruction-3-metadata}}'}
       - name: reconstruction
         template: reconstruction
         dependencies: [simulation]
@@ -48,6 +126,9 @@ spec:
     inputs:
       artifacts:
       - {name: simulation-metadata, path: /tmp/inputs/input-0/data}
+    outputs:
+      artifacts:
+      - {name: reconstruction-metadata, path: /mnt/lcio_rec_path}
     metadata:
       labels:
         pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
@@ -73,6 +154,9 @@ spec:
     inputs:
       artifacts:
       - {name: simulation-2-metadata, path: /tmp/inputs/input-0/data}
+    outputs:
+      artifacts:
+      - {name: reconstruction-2-metadata, path: /mnt/lcio_rec_path}
     metadata:
       labels:
         pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
@@ -98,6 +182,9 @@ spec:
     inputs:
       artifacts:
       - {name: simulation-3-metadata, path: /tmp/inputs/input-0/data}
+    outputs:
+      artifacts:
+      - {name: reconstruction-3-metadata, path: /mnt/lcio_rec_path}
     metadata:
       labels:
         pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
