attempting to generate 50k showers

--- a/nestedGAN_pipelineEOS.py.yaml
+++ b/nestedGAN_pipelineEOS.py.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata:
   generateName: ildeventgen-nestedgan-
-  annotations: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9, pipelines.kubeflow.org/pipeline_compilation_time: '2022-03-07T09:57:45.245444',
+  annotations: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9, pipelines.kubeflow.org/pipeline_compilation_time: '2022-03-07T10:54:12.996306',
     pipelines.kubeflow.org/pipeline_spec: '{"description": "Event Simulation and Reconstruction",
       "name": "ILDEventGen_NestedGAN"}'}
   labels: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9}
@@ -50,7 +50,7 @@ spec:
           &&                                 cp /secret/krb-secret-vol/krb5cc_1000
           /tmp/krb5cc_0 && chmod 600 /tmp/krb5cc_0                                 &&
           python create_hdf5EOS.py --lcio "$0" --outputR "$1" --outputP "$2" --nEvents
-          100', /tmp/inputs/input-0/data, testEOS, '1']
+          100', /tmp/inputs/input-0/data, testEOS, '0']
       command: [/bin/bash, -c]
       image: ilcsoft/py3lcio:lcio-16
       volumeMounts:
@@ -67,7 +67,6 @@ spec:
         pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
         pipelines.kubeflow.org/pipeline-sdk-type: kfp
         pipelines.kubeflow.org/enable_caching: "true"
-      annotations: {pipelines.kubeflow.org/max_cache_staleness: P0D}
     volumes:
     - hostPath: {path: /var/eos}
       name: eos
@@ -81,7 +80,7 @@ spec:
           &&                                 cp /secret/krb-secret-vol/krb5cc_1000
           /tmp/krb5cc_0 && chmod 600 /tmp/krb5cc_0                                 &&
           python create_hdf5EOS.py --lcio "$0" --outputR "$1" --outputP "$2" --nEvents
-          100', /tmp/inputs/input-0/data, testEOS, '2']
+          100', /tmp/inputs/input-0/data, testEOS, '1']
       command: [/bin/bash, -c]
       image: ilcsoft/py3lcio:lcio-16
       volumeMounts:
@@ -112,7 +111,7 @@ spec:
           &&                                 cp /secret/krb-secret-vol/krb5cc_1000
           /tmp/krb5cc_0 && chmod 600 /tmp/krb5cc_0                                 &&
           python create_hdf5EOS.py --lcio "$0" --outputR "$1" --outputP "$2" --nEvents
-          100', /tmp/inputs/input-0/data, testEOS, '3']
+          100', /tmp/inputs/input-0/data, testEOS, '2']
       command: [/bin/bash, -c]
       image: ilcsoft/py3lcio:lcio-16
       volumeMounts:
@@ -124,6 +123,37 @@ spec:
     outputs:
       artifacts:
       - {name: hdf5-conversion-3-metadata, path: /mnt/hdf5_path}
+    metadata:
+      labels:
+        pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
+        pipelines.kubeflow.org/pipeline-sdk-type: kfp
+        pipelines.kubeflow.org/enable_caching: "true"
+      annotations: {pipelines.kubeflow.org/max_cache_staleness: P0D}
+    volumes:
+    - hostPath: {path: /var/eos}
+      name: eos
+    - name: krb-secret-vol
+      secret: {secretName: krb-secret}
+  - name: hdf5-conversion-4
+    container:
+      args: ['cd LCIO; source setup.sh; cd .. &&                                 conda
+          init bash; source /root/.bashrc; conda activate root_env &&                                 git
+          clone https://github.com/EnginEren/hgAHCal-ECal.git && cd $PWD/hgAHCal-ECal
+          &&                                 cp /secret/krb-secret-vol/krb5cc_1000
+          /tmp/krb5cc_0 && chmod 600 /tmp/krb5cc_0                                 &&
+          python create_hdf5EOS.py --lcio "$0" --outputR "$1" --outputP "$2" --nEvents
+          100', /tmp/inputs/input-0/data, testEOS, '3']
+      command: [/bin/bash, -c]
+      image: ilcsoft/py3lcio:lcio-16
+      volumeMounts:
+      - {mountPath: /eos, name: eos}
+      - {mountPath: /secret/krb-secret-vol, name: krb-secret-vol}
+    inputs:
+      artifacts:
+      - {name: reconstruction-4-metadata, path: /tmp/inputs/input-0/data}
+    outputs:
+      artifacts:
+      - {name: hdf5-conversion-4-metadata, path: /mnt/hdf5_path}
     metadata:
       labels:
         pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
@@ -163,6 +193,12 @@ spec:
         arguments:
           artifacts:
           - {name: reconstruction-3-metadata, from: '{{tasks.reconstruction-3.outputs.artifacts.reconstruction-3-metadata}}'}
+      - name: hdf5-conversion-4
+        template: hdf5-conversion-4
+        dependencies: [reconstruction-4]
+        arguments:
+          artifacts:
+          - {name: reconstruction-4-metadata, from: '{{tasks.reconstruction-4.outputs.artifacts.reconstruction-4-metadata}}'}
       - name: reconstruction
         template: reconstruction
         dependencies: [simulation]
@@ -181,16 +217,23 @@ spec:
         arguments:
           artifacts:
           - {name: simulation-3-metadata, from: '{{tasks.simulation-3.outputs.artifacts.simulation-3-metadata}}'}
+      - name: reconstruction-4
+        template: reconstruction-4
+        dependencies: [simulation-4]
+        arguments:
+          artifacts:
+          - {name: simulation-4-metadata, from: '{{tasks.simulation-4.outputs.artifacts.simulation-4-metadata}}'}
       - {name: simulation, template: simulation}
       - {name: simulation-2, template: simulation-2}
       - {name: simulation-3, template: simulation-3}
+      - {name: simulation-4, template: simulation-4}
   - name: reconstruction
     container:
       args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git &&                                 cd
           $PWD/hgAHCal-ECal &&                                 cp /secret/krb-secret-vol/krb5cc_1000
           /tmp/krb5cc_0 &&                                 chmod 600 /tmp/krb5cc_0
           &&                                  chmod +x ./runRec.sh && ./runRec.sh
-          "$0" "$1" "$2" ', /tmp/inputs/input-0/data, '1', testEOS]
+          "$0" "$1" "$2" ', /tmp/inputs/input-0/data, '0', testEOS]
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
       volumeMounts:
@@ -218,7 +261,7 @@ spec:
           $PWD/hgAHCal-ECal &&                                 cp /secret/krb-secret-vol/krb5cc_1000
           /tmp/krb5cc_0 &&                                 chmod 600 /tmp/krb5cc_0
           &&                                  chmod +x ./runRec.sh && ./runRec.sh
-          "$0" "$1" "$2" ', /tmp/inputs/input-0/data, '2', testEOS]
+          "$0" "$1" "$2" ', /tmp/inputs/input-0/data, '1', testEOS]
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
       volumeMounts:
@@ -246,7 +289,7 @@ spec:
           $PWD/hgAHCal-ECal &&                                 cp /secret/krb-secret-vol/krb5cc_1000
           /tmp/krb5cc_0 &&                                 chmod 600 /tmp/krb5cc_0
           &&                                  chmod +x ./runRec.sh && ./runRec.sh
-          "$0" "$1" "$2" ', /tmp/inputs/input-0/data, '3', testEOS]
+          "$0" "$1" "$2" ', /tmp/inputs/input-0/data, '2', testEOS]
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
       volumeMounts:
@@ -268,12 +311,40 @@ spec:
       name: eos
     - name: krb-secret-vol
       secret: {secretName: krb-secret}
+  - name: reconstruction-4
+    container:
+      args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git &&                                 cd
+          $PWD/hgAHCal-ECal &&                                 cp /secret/krb-secret-vol/krb5cc_1000
+          /tmp/krb5cc_0 &&                                 chmod 600 /tmp/krb5cc_0
+          &&                                  chmod +x ./runRec.sh && ./runRec.sh
+          "$0" "$1" "$2" ', /tmp/inputs/input-0/data, '3', testEOS]
+      command: [/bin/bash, -c]
+      image: ilcsoft/ilcsoft-spack:latest
+      volumeMounts:
+      - {mountPath: /eos, name: eos}
+      - {mountPath: /secret/krb-secret-vol, name: krb-secret-vol}
+    inputs:
+      artifacts:
+      - {name: simulation-4-metadata, path: /tmp/inputs/input-0/data}
+    outputs:
+      artifacts:
+      - {name: reconstruction-4-metadata, path: /mnt/lcio_rec_path}
+    metadata:
+      labels:
+        pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
+        pipelines.kubeflow.org/pipeline-sdk-type: kfp
+        pipelines.kubeflow.org/enable_caching: "true"
+    volumes:
+    - hostPath: {path: /var/eos}
+      name: eos
+    - name: krb-secret-vol
+      secret: {secretName: krb-secret}
   - name: simulation
     container:
       args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git && whoami &&                                 cp
           /secret/krb-secret-vol/krb5cc_1000 /tmp/krb5cc_0 &&                                 chmod
           600 /tmp/krb5cc_0 &&                                  cd $PWD/hgAHCal-ECal
-          && chmod +x ./runSimNestedEOS.sh && ./runSimNestedEOS.sh "$0" "$1" ', '1',
+          && chmod +x ./runSimNestedEOS.sh && ./runSimNestedEOS.sh "$0" "$1" ', '0',
         testEOS]
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
@@ -288,7 +359,6 @@ spec:
         pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
         pipelines.kubeflow.org/pipeline-sdk-type: kfp
         pipelines.kubeflow.org/enable_caching: "true"
-      annotations: {pipelines.kubeflow.org/max_cache_staleness: P0D}
     volumes:
     - hostPath: {path: /var/eos}
       name: eos
@@ -299,7 +369,7 @@ spec:
       args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git && whoami &&                                 cp
           /secret/krb-secret-vol/krb5cc_1000 /tmp/krb5cc_0 &&                                 chmod
           600 /tmp/krb5cc_0 &&                                  cd $PWD/hgAHCal-ECal
-          && chmod +x ./runSimNestedEOS.sh && ./runSimNestedEOS.sh "$0" "$1" ', '2',
+          && chmod +x ./runSimNestedEOS.sh && ./runSimNestedEOS.sh "$0" "$1" ', '1',
         testEOS]
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
@@ -325,7 +395,7 @@ spec:
       args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git && whoami &&                                 cp
           /secret/krb-secret-vol/krb5cc_1000 /tmp/krb5cc_0 &&                                 chmod
           600 /tmp/krb5cc_0 &&                                  cd $PWD/hgAHCal-ECal
-          && chmod +x ./runSimNestedEOS.sh && ./runSimNestedEOS.sh "$0" "$1" ', '3',
+          && chmod +x ./runSimNestedEOS.sh && ./runSimNestedEOS.sh "$0" "$1" ', '2',
         testEOS]
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
@@ -335,6 +405,32 @@ spec:
     outputs:
       artifacts:
       - {name: simulation-3-metadata, path: /mnt/lcio_path}
+    metadata:
+      labels:
+        pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
+        pipelines.kubeflow.org/pipeline-sdk-type: kfp
+        pipelines.kubeflow.org/enable_caching: "true"
+      annotations: {pipelines.kubeflow.org/max_cache_staleness: P0D}
+    volumes:
+    - hostPath: {path: /var/eos}
+      name: eos
+    - name: krb-secret-vol
+      secret: {secretName: krb-secret}
+  - name: simulation-4
+    container:
+      args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git && whoami &&                                 cp
+          /secret/krb-secret-vol/krb5cc_1000 /tmp/krb5cc_0 &&                                 chmod
+          600 /tmp/krb5cc_0 &&                                  cd $PWD/hgAHCal-ECal
+          && chmod +x ./runSimNestedEOS.sh && ./runSimNestedEOS.sh "$0" "$1" ', '3',
+        testEOS]
+      command: [/bin/bash, -c]
+      image: ilcsoft/ilcsoft-spack:latest
+      volumeMounts:
+      - {mountPath: /eos, name: eos}
+      - {mountPath: /secret/krb-secret-vol, name: krb-secret-vol}
+    outputs:
+      artifacts:
+      - {name: simulation-4-metadata, path: /mnt/lcio_path}
     metadata:
       labels:
         pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
