--- a/nestedGAN_pipelineEOS.py.yaml
+++ b/nestedGAN_pipelineEOS.py.yaml
@@ -2,13 +2,38 @@ apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata:
   generateName: ildeventgen-nestedgan-
-  annotations: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9, pipelines.kubeflow.org/pipeline_compilation_time: '2022-03-07T10:54:12.996306',
+  annotations: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9, pipelines.kubeflow.org/pipeline_compilation_time: '2022-03-09T10:32:42.180153',
     pipelines.kubeflow.org/pipeline_spec: '{"description": "Event Simulation and Reconstruction",
       "name": "ILDEventGen_NestedGAN"}'}
   labels: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9}
 spec:
   entrypoint: ildeventgen-nestedgan
   templates:
+  - name: combine-hdf5-files
+    container:
+      args: ['cd LCIO; source setup.sh; cd .. &&                                 conda
+          init bash; source /root/.bashrc; conda activate root_env &&                                 git
+          clone https://github.com/EnginEren/hgAHCal-ECal.git && cd $PWD/hgAHCal-ECal
+          &&                                 cp /secret/krb-secret-vol/krb5cc_1000
+          /tmp/krb5cc_0 && chmod 600 /tmp/krb5cc_0                                 &&
+          python combineEOS.py --input $0 --output $1', '[<kfp.dsl._container_op.InputArgumentPath
+          object at 0x7f2f91a9c410>, <kfp.dsl._container_op.InputArgumentPath object
+          at 0x7f2f91a2ce90>]', /eos/user/e/eneren/mergedData_prod5k.hdf5]
+      command: [/bin/bash, -c]
+      image: ilcsoft/py3lcio:lcio-16
+      volumeMounts:
+      - {mountPath: /eos, name: eos}
+      - {mountPath: /secret/krb-secret-vol, name: krb-secret-vol}
+    metadata:
+      labels:
+        pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
+        pipelines.kubeflow.org/pipeline-sdk-type: kfp
+        pipelines.kubeflow.org/enable_caching: "true"
+    volumes:
+    - hostPath: {path: /var/eos}
+      name: eos
+    - name: krb-secret-vol
+      secret: {secretName: krb-secret}
   - name: control-plots
     container:
       args: ['cd LCIO; source setup.sh; cd .. &&                                 conda
@@ -16,7 +41,7 @@ spec:
           &&                                 git clone https://github.com/EnginEren/hgAHCal-ECal.git
           && cd $PWD/hgAHCal-ECal &&                                 cp /secret/krb-secret-vol/krb5cc_1000
           /tmp/krb5cc_0 && chmod 600 /tmp/krb5cc_0 &&                                 python
-          controlEOS.py --lcio "$0" --h5file "$1" --nEvents 100 &&                                 cd
+          controlEOS.py --lcio "$0" --h5file "$1" --nEvents 4000 &&                                 cd
           /mnt/plots/ && touch pion_plots.tar.gz &&                                 tar
           --exclude=pion_plots.tar.gz -zcvf pion_plots.tar.gz .', /tmp/inputs/input-0/data,
         /tmp/inputs/input-1/data]
@@ -50,7 +75,7 @@ spec:
           &&                                 cp /secret/krb-secret-vol/krb5cc_1000
           /tmp/krb5cc_0 && chmod 600 /tmp/krb5cc_0                                 &&
           python create_hdf5EOS.py --lcio "$0" --outputR "$1" --outputP "$2" --nEvents
-          100', /tmp/inputs/input-0/data, testEOS, '0']
+          5000', /tmp/inputs/input-0/data, prod5k, '0']
       command: [/bin/bash, -c]
       image: ilcsoft/py3lcio:lcio-16
       volumeMounts:
@@ -80,7 +105,7 @@ spec:
           &&                                 cp /secret/krb-secret-vol/krb5cc_1000
           /tmp/krb5cc_0 && chmod 600 /tmp/krb5cc_0                                 &&
           python create_hdf5EOS.py --lcio "$0" --outputR "$1" --outputP "$2" --nEvents
-          100', /tmp/inputs/input-0/data, testEOS, '1']
+          5000', /tmp/inputs/input-0/data, prod5k, '1']
       command: [/bin/bash, -c]
       image: ilcsoft/py3lcio:lcio-16
       volumeMounts:
@@ -97,7 +122,6 @@ spec:
         pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
         pipelines.kubeflow.org/pipeline-sdk-type: kfp
         pipelines.kubeflow.org/enable_caching: "true"
-      annotations: {pipelines.kubeflow.org/max_cache_staleness: P0D}
     volumes:
     - hostPath: {path: /var/eos}
       name: eos
@@ -111,7 +135,7 @@ spec:
           &&                                 cp /secret/krb-secret-vol/krb5cc_1000
           /tmp/krb5cc_0 && chmod 600 /tmp/krb5cc_0                                 &&
           python create_hdf5EOS.py --lcio "$0" --outputR "$1" --outputP "$2" --nEvents
-          100', /tmp/inputs/input-0/data, testEOS, '2']
+          5000', /tmp/inputs/input-0/data, prod5k, '2']
       command: [/bin/bash, -c]
       image: ilcsoft/py3lcio:lcio-16
       volumeMounts:
@@ -128,7 +152,6 @@ spec:
         pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
         pipelines.kubeflow.org/pipeline-sdk-type: kfp
         pipelines.kubeflow.org/enable_caching: "true"
-      annotations: {pipelines.kubeflow.org/max_cache_staleness: P0D}
     volumes:
     - hostPath: {path: /var/eos}
       name: eos
@@ -142,7 +165,7 @@ spec:
           &&                                 cp /secret/krb-secret-vol/krb5cc_1000
           /tmp/krb5cc_0 && chmod 600 /tmp/krb5cc_0                                 &&
           python create_hdf5EOS.py --lcio "$0" --outputR "$1" --outputP "$2" --nEvents
-          100', /tmp/inputs/input-0/data, testEOS, '3']
+          5000', /tmp/inputs/input-0/data, prod5k, '3']
       command: [/bin/bash, -c]
       image: ilcsoft/py3lcio:lcio-16
       volumeMounts:
@@ -159,7 +182,36 @@ spec:
         pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
         pipelines.kubeflow.org/pipeline-sdk-type: kfp
         pipelines.kubeflow.org/enable_caching: "true"
-      annotations: {pipelines.kubeflow.org/max_cache_staleness: P0D}
+    volumes:
+    - hostPath: {path: /var/eos}
+      name: eos
+    - name: krb-secret-vol
+      secret: {secretName: krb-secret}
+  - name: hdf5-conversion-5
+    container:
+      args: ['cd LCIO; source setup.sh; cd .. &&                                 conda
+          init bash; source /root/.bashrc; conda activate root_env &&                                 git
+          clone https://github.com/EnginEren/hgAHCal-ECal.git && cd $PWD/hgAHCal-ECal
+          &&                                 cp /secret/krb-secret-vol/krb5cc_1000
+          /tmp/krb5cc_0 && chmod 600 /tmp/krb5cc_0                                 &&
+          python create_hdf5EOS.py --lcio "$0" --outputR "$1" --outputP "$2" --nEvents
+          5000', /tmp/inputs/input-0/data, prod5k, '4']
+      command: [/bin/bash, -c]
+      image: ilcsoft/py3lcio:lcio-16
+      volumeMounts:
+      - {mountPath: /eos, name: eos}
+      - {mountPath: /secret/krb-secret-vol, name: krb-secret-vol}
+    inputs:
+      artifacts:
+      - {name: reconstruction-5-metadata, path: /tmp/inputs/input-0/data}
+    outputs:
+      artifacts:
+      - {name: hdf5-conversion-5-metadata, path: /mnt/hdf5_path}
+    metadata:
+      labels:
+        pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
+        pipelines.kubeflow.org/pipeline-sdk-type: kfp
+        pipelines.kubeflow.org/enable_caching: "true"
     volumes:
     - hostPath: {path: /var/eos}
       name: eos
@@ -168,6 +220,7 @@ spec:
   - name: ildeventgen-nestedgan
     dag:
       tasks:
+      - {name: combine-hdf5-files, template: combine-hdf5-files}
       - name: control-plots
         template: control-plots
         dependencies: [hdf5-conversion, reconstruction]
@@ -199,6 +252,12 @@ spec:
         arguments:
           artifacts:
           - {name: reconstruction-4-metadata, from: '{{tasks.reconstruction-4.outputs.artifacts.reconstruction-4-metadata}}'}
+      - name: hdf5-conversion-5
+        template: hdf5-conversion-5
+        dependencies: [reconstruction-5]
+        arguments:
+          artifacts:
+          - {name: reconstruction-5-metadata, from: '{{tasks.reconstruction-5.outputs.artifacts.reconstruction-5-metadata}}'}
       - name: reconstruction
         template: reconstruction
         dependencies: [simulation]
@@ -223,17 +282,24 @@ spec:
         arguments:
           artifacts:
           - {name: simulation-4-metadata, from: '{{tasks.simulation-4.outputs.artifacts.simulation-4-metadata}}'}
+      - name: reconstruction-5
+        template: reconstruction-5
+        dependencies: [simulation-5]
+        arguments:
+          artifacts:
+          - {name: simulation-5-metadata, from: '{{tasks.simulation-5.outputs.artifacts.simulation-5-metadata}}'}
       - {name: simulation, template: simulation}
       - {name: simulation-2, template: simulation-2}
       - {name: simulation-3, template: simulation-3}
       - {name: simulation-4, template: simulation-4}
+      - {name: simulation-5, template: simulation-5}
   - name: reconstruction
     container:
       args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git &&                                 cd
           $PWD/hgAHCal-ECal &&                                 cp /secret/krb-secret-vol/krb5cc_1000
           /tmp/krb5cc_0 &&                                 chmod 600 /tmp/krb5cc_0
           &&                                  chmod +x ./runRec.sh && ./runRec.sh
-          "$0" "$1" "$2" ', /tmp/inputs/input-0/data, '0', testEOS]
+          "$0" "$1" "$2" ', /tmp/inputs/input-0/data, '0', prod5k]
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
       volumeMounts:
@@ -261,7 +327,7 @@ spec:
           $PWD/hgAHCal-ECal &&                                 cp /secret/krb-secret-vol/krb5cc_1000
           /tmp/krb5cc_0 &&                                 chmod 600 /tmp/krb5cc_0
           &&                                  chmod +x ./runRec.sh && ./runRec.sh
-          "$0" "$1" "$2" ', /tmp/inputs/input-0/data, '1', testEOS]
+          "$0" "$1" "$2" ', /tmp/inputs/input-0/data, '1', prod5k]
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
       volumeMounts:
@@ -289,7 +355,7 @@ spec:
           $PWD/hgAHCal-ECal &&                                 cp /secret/krb-secret-vol/krb5cc_1000
           /tmp/krb5cc_0 &&                                 chmod 600 /tmp/krb5cc_0
           &&                                  chmod +x ./runRec.sh && ./runRec.sh
-          "$0" "$1" "$2" ', /tmp/inputs/input-0/data, '2', testEOS]
+          "$0" "$1" "$2" ', /tmp/inputs/input-0/data, '2', prod5k]
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
       volumeMounts:
@@ -317,7 +383,7 @@ spec:
           $PWD/hgAHCal-ECal &&                                 cp /secret/krb-secret-vol/krb5cc_1000
           /tmp/krb5cc_0 &&                                 chmod 600 /tmp/krb5cc_0
           &&                                  chmod +x ./runRec.sh && ./runRec.sh
-          "$0" "$1" "$2" ', /tmp/inputs/input-0/data, '3', testEOS]
+          "$0" "$1" "$2" ', /tmp/inputs/input-0/data, '3', prod5k]
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
       volumeMounts:
@@ -339,13 +405,41 @@ spec:
       name: eos
     - name: krb-secret-vol
       secret: {secretName: krb-secret}
+  - name: reconstruction-5
+    container:
+      args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git &&                                 cd
+          $PWD/hgAHCal-ECal &&                                 cp /secret/krb-secret-vol/krb5cc_1000
+          /tmp/krb5cc_0 &&                                 chmod 600 /tmp/krb5cc_0
+          &&                                  chmod +x ./runRec.sh && ./runRec.sh
+          "$0" "$1" "$2" ', /tmp/inputs/input-0/data, '4', prod5k]
+      command: [/bin/bash, -c]
+      image: ilcsoft/ilcsoft-spack:latest
+      volumeMounts:
+      - {mountPath: /eos, name: eos}
+      - {mountPath: /secret/krb-secret-vol, name: krb-secret-vol}
+    inputs:
+      artifacts:
+      - {name: simulation-5-metadata, path: /tmp/inputs/input-0/data}
+    outputs:
+      artifacts:
+      - {name: reconstruction-5-metadata, path: /mnt/lcio_rec_path}
+    metadata:
+      labels:
+        pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
+        pipelines.kubeflow.org/pipeline-sdk-type: kfp
+        pipelines.kubeflow.org/enable_caching: "true"
+    volumes:
+    - hostPath: {path: /var/eos}
+      name: eos
+    - name: krb-secret-vol
+      secret: {secretName: krb-secret}
   - name: simulation
     container:
       args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git && whoami &&                                 cp
           /secret/krb-secret-vol/krb5cc_1000 /tmp/krb5cc_0 &&                                 chmod
           600 /tmp/krb5cc_0 &&                                  cd $PWD/hgAHCal-ECal
           && chmod +x ./runSimNestedEOS.sh && ./runSimNestedEOS.sh "$0" "$1" ', '0',
-        testEOS]
+        prod5k]
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
       volumeMounts:
@@ -370,7 +464,7 @@ spec:
           /secret/krb-secret-vol/krb5cc_1000 /tmp/krb5cc_0 &&                                 chmod
           600 /tmp/krb5cc_0 &&                                  cd $PWD/hgAHCal-ECal
           && chmod +x ./runSimNestedEOS.sh && ./runSimNestedEOS.sh "$0" "$1" ', '1',
-        testEOS]
+        prod5k]
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
       volumeMounts:
@@ -384,7 +478,6 @@ spec:
         pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
         pipelines.kubeflow.org/pipeline-sdk-type: kfp
         pipelines.kubeflow.org/enable_caching: "true"
-      annotations: {pipelines.kubeflow.org/max_cache_staleness: P0D}
     volumes:
     - hostPath: {path: /var/eos}
       name: eos
@@ -396,7 +489,7 @@ spec:
           /secret/krb-secret-vol/krb5cc_1000 /tmp/krb5cc_0 &&                                 chmod
           600 /tmp/krb5cc_0 &&                                  cd $PWD/hgAHCal-ECal
           && chmod +x ./runSimNestedEOS.sh && ./runSimNestedEOS.sh "$0" "$1" ', '2',
-        testEOS]
+        prod5k]
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
       volumeMounts:
@@ -410,7 +503,6 @@ spec:
         pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
         pipelines.kubeflow.org/pipeline-sdk-type: kfp
         pipelines.kubeflow.org/enable_caching: "true"
-      annotations: {pipelines.kubeflow.org/max_cache_staleness: P0D}
     volumes:
     - hostPath: {path: /var/eos}
       name: eos
@@ -422,7 +514,7 @@ spec:
           /secret/krb-secret-vol/krb5cc_1000 /tmp/krb5cc_0 &&                                 chmod
           600 /tmp/krb5cc_0 &&                                  cd $PWD/hgAHCal-ECal
           && chmod +x ./runSimNestedEOS.sh && ./runSimNestedEOS.sh "$0" "$1" ', '3',
-        testEOS]
+        prod5k]
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
       volumeMounts:
@@ -436,7 +528,31 @@ spec:
         pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
         pipelines.kubeflow.org/pipeline-sdk-type: kfp
         pipelines.kubeflow.org/enable_caching: "true"
-      annotations: {pipelines.kubeflow.org/max_cache_staleness: P0D}
+    volumes:
+    - hostPath: {path: /var/eos}
+      name: eos
+    - name: krb-secret-vol
+      secret: {secretName: krb-secret}
+  - name: simulation-5
+    container:
+      args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git && whoami &&                                 cp
+          /secret/krb-secret-vol/krb5cc_1000 /tmp/krb5cc_0 &&                                 chmod
+          600 /tmp/krb5cc_0 &&                                  cd $PWD/hgAHCal-ECal
+          && chmod +x ./runSimNestedEOS.sh && ./runSimNestedEOS.sh "$0" "$1" ', '4',
+        prod5k]
+      command: [/bin/bash, -c]
+      image: ilcsoft/ilcsoft-spack:latest
+      volumeMounts:
+      - {mountPath: /eos, name: eos}
+      - {mountPath: /secret/krb-secret-vol, name: krb-secret-vol}
+    outputs:
+      artifacts:
+      - {name: simulation-5-metadata, path: /mnt/lcio_path}
+    metadata:
+      labels:
+        pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
+        pipelines.kubeflow.org/pipeline-sdk-type: kfp
+        pipelines.kubeflow.org/enable_caching: "true"
     volumes:
     - hostPath: {path: /var/eos}
       name: eos
