--- a/hdf5_leftoverEOS.py.yaml
+++ b/hdf5_leftoverEOS.py.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata:
   generateName: ildeventgen-nestedgan-
-  annotations: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9, pipelines.kubeflow.org/pipeline_compilation_time: '2022-03-21T15:39:54.503100',
+  annotations: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9, pipelines.kubeflow.org/pipeline_compilation_time: '2022-03-21T16:07:12.856729',
     pipelines.kubeflow.org/pipeline_spec: '{"description": "Event Simulation and Reconstruction",
       "name": "ILDEventGen_NestedGAN"}'}
   labels: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9}
@@ -13,10 +13,10 @@ spec:
     container:
       args: ['cd LCIO; source setup.sh; cd .. &&                                 conda
           init bash; source /root/.bashrc; conda activate root_env &&                                 cp
-          /secret/krb-secret-vol/krb5cc_1000 /tmp/krb5cc_0 && chmod 600 /tmp/krb5cc_0  &&                                 cd
-          $0 && git clone https://github.com/EnginEren/hgAHCal-ECal.git && cd $PWD/hgAHCal-ECal
+          /secret/krb-secret-vol/krb5cc_1000 /tmp/krb5cc_0 && chmod 600 /tmp/krb5cc_0  &&                                 git
+          clone https://github.com/EnginEren/hgAHCal-ECal.git && cd $PWD/hgAHCal-ECal
           &&                                 chmod +x hdf5_leftover.sh && ./hdf5_leftover.sh
-          $1', eos/user/e/eneren/run_prod50k/hdf5, ./mergedData_prod.hdf5]
+          $0 $1', /eos/user/e/eneren/run_prod50k/hdf5, ./mergedData_prod.hdf5]
       command: [/bin/bash, -c]
       image: ilcsoft/py3lcio:lcio-16
       volumeMounts:
